--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,9 +1,10 @@
 .header-container {
   height: 5%;
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  /* margin: 20px 40px; */
 }
 
 .page-title {
@@ -11,7 +12,7 @@
   font-size: var(--header-font-size);
   text-shadow: var(--text-shadow);
   color: var(--font-color);
-  padding: 20px 0px;
+  padding: 20px 40px;
 }
 
 .small-screen-title {
@@ -20,7 +21,60 @@
   font-size: var(--header-font-size);
   text-shadow: var(--text-shadow);
   color: var(--font-color);
-  padding: 20px 0;
+  padding: 20px 40px;
+}
+
+.link {
+  margin-right: 20px;
+  cursor: pointer;
+  padding: 20px;
+  text-shadow: var(--text-shadow);
+  font-weight: 800;
+}
+
+.show {
+  animation: slide-right 1s;
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 40%;
+  overflow-y: scroll;
+  min-height: 100vh;
+  max-height: 100%;
+  background-color: rgb(17, 17, 17);
+  box-shadow: 0 0 40px var(--font-color);
+  /* padding-top: 40px; */
+}
+
+.slide-in-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-bottom: 6vh;
+}
+
+.slide-in-title p {
+  padding-top: 2px;
+  font-size: max(2vh, 15px);
+  font-weight: 800;
+  text-shadow: var(--second-font-color) 1px 0 10px;
+}
+
+.close-btn {
+  margin: 0;
+  cursor: pointer;
+  padding: 0px 10px;
+  right: 20px;
+  border-radius: 10px;
+  transition: background-color 0.5s ease-in-out;
+}
+
+.close-btn:hover {
+  cursor: pointer;
+  color: rgb(17, 17, 17);
+  background-color: var(--font-color);
 }
 
 .input-fields {
@@ -54,26 +108,32 @@
 
 .flex-inputs {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
 .flex {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-right: 30px;
 }
 
-.flex > p {
+.flex > p,
+p {
+  text-align: center;
   font-weight: bold;
   margin-right: 5px;
+  font-size: 15px;
 }
 
 .subtitle {
   text-align: center;
-  font-size: 12px;
+  font-size: 15px;
   font-style: italic;
   color: var(--second-font-color);
-  margin: 20px 10px;
+  padding: 20px 10px;
+  margin-bottom: 6vh;
 }
 
 @media (max-width: 1470px) {
@@ -91,12 +151,40 @@
   }
 }
 
-@media (max-width: 700px) {
-  .flex-inputs {
-    flex-direction: column;
+@media (max-width: 850px) {
+  .show {
+    width: 60%;
+  }
+}
+@media (max-width: 600px) {
+  .small-screen-title {
+    padding: 20px 20px;
+  }
+  .link {
+    margin: 0 20px 0 0;
+    padding: 0;
+  }
+
+  .show {
+    width: 100%;
   }
 }
 
 ::-webkit-inner-spin-button {
   display: none;
+}
+/* 
+input[type='date'],
+input[type='time'] {
+  -webkit-appearance: none;
+} */
+
+@keyframes slide-right {
+  from {
+    margin-right: -100%;
+  }
+
+  to {
+    margin-right: 0%;
+  }
 }
